// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components WeatherCard renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WeatherCard
    date="date"
    high={0}
    icon="icon"
    low={0}
    temp={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        0,
        "icon",
        "date",
        0,
        0,
      ],
    },
    "ref": null,
    "rendered": Array [
      0,
      "icon",
      "date",
      0,
      0,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          0,
          "icon",
          "date",
          0,
          0,
        ],
      },
      "ref": null,
      "rendered": Array [
        0,
        "icon",
        "date",
        0,
        0,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Components WeatherCards renders correctly 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <WeatherCards
    weatherList={
        Array [
            "weatherList",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "weatherList": Array [
        "weatherList",
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "0",
      "nodeType": "function",
      "props": Object {
        "date": "",
        "high": 0,
        "icon": "",
        "low": 0,
        "temp": 0,
      },
      "ref": null,
      "rendered": Object {
        "instance": <div>
          0
          0
          0
</div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            0,
            "",
            "",
            0,
            0,
          ],
        },
        "ref": null,
        "rendered": Array [
          "0",
          "",
          "",
          "0",
          "0",
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "weatherList": Array [
          "weatherList",
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "date": "",
          "high": 0,
          "icon": "",
          "low": 0,
          "temp": 0,
        },
        "ref": null,
        "rendered": Object {
          "instance": <div>
            0
            0
            0
</div>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              0,
              "",
              "",
              0,
              0,
            ],
          },
          "ref": null,
          "rendered": Array [
            "0",
            "",
            "",
            "0",
            "0",
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
